--- a/src/components/ButtonRegister/styles.module.css
+++ b/src/components/ButtonRegister/styles.module.css
@@ -6,7 +6,7 @@
   width: 100%;
   cursor: pointer;
   background-color: #EFF3F8;
-  color: #ED2590;
+  color: #ed6d25;
   font-weight: 600;
   font-size: 16px;
   max-width: 350px;
@@ -14,5 +14,5 @@
 }
 
 .button:hover{
-  box-shadow: 0px 2px 10px #ED2590 ;
+  box-shadow: 0px 2px 10px #ed6d25 ;
 }
