--- a/src/components/Profile/CommunityCard/IconCommunity.module.css
+++ b/src/components/Profile/CommunityCard/IconCommunity.module.css
@@ -52,7 +52,7 @@ line-height: 24px; /* 150% */
 
 
 .Vertodos {  
-color: #ED2590;
+color: #ed6d25;
 font-family: SF Pro Display;
 font-size: 14px;
 font-style: normal;
