--- a/src/components/Profile/ButtonEditProfile/styles.module.css
+++ b/src/components/Profile/ButtonEditProfile/styles.module.css
@@ -11,7 +11,7 @@
     flex-shrink: 0;
     border-radius: 16px;
     background: #FDFEFF;
-    color: #ED2590;
+    color: #ed6d25;
     font-family: SF Pro Display;
     font-size: 18px;
     font-style: normal;
