--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,65 +1,71 @@
 .header {
-    background-color: #fff;
-    padding: 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 4rem;
+  background-color: #fff;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 4rem;
 }
 
 .header .content {
-    width: 80%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.header .contentLogin {
-    width: 80%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
 }
 
-.header .logoimg {
-    width: 5rem;
-    height: auto;
-    margin-right: 2rem;
+.header .contentLogin {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header .logo {
+  color: #ed6d25;
+  font-family: sans-serif;
+  font-size: 2rem;
+  font-weight: 800;
+  text-decoration: none;
+ 
 }
 
 .header .links {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
 }
 
 .header .links a {
-    color: #4b4b4b;
-    font-family: SF Pro Display;
-    text-decoration: none;
-    margin-right: 2rem;
+  color: #4b4b4b;
+  font-family: SF Pro Display;
+  font-size: 1rem;
+  text-decoration: none;
 }
 
 .header .links a:hover {
-    color: #ed2590;
+  color: #ed6d25;
 }
 
 .header .links a:last-child {
-    margin-right: 0;
+  margin-right: 0;
 }
 
 @media (max-width: 1000px) {
-    .header .links {
-        display: none;
-    }
-    .header .content {
-        justify-content: space-between;
-    }
-
-    .header .contentLogin {
-        justify-content: center;
-    }
-
-    .header .logoimg {
-        margin-right: 0;
-    }
+  .header .links {
+    display: none;
   }
+  .header .content {
+    justify-content: space-between;
+  }
+
+  .header .contentLogin {
+    justify-content: center;
+  }
+
+  .header .logo {
+    margin-right: 0;
+  }
+}
