--- a/src/pages/Signin/styles.module.css
+++ b/src/pages/Signin/styles.module.css
@@ -10,15 +10,14 @@
   align-items: center;
   justify-content: center;
   gap: 2rem;
-  margin: 0 3rem;
-  height: 100vh;
+  margin-top: 5rem;
 }
 
 .CardImg {  
   position: relative;
   width: 100%;
-  height: 35rem;
-  max-width: 45rem;
+  height: 30rem;
+  max-width: 40rem;
   background-image: linear-gradient(189deg, rgba(20, 20, 20, 0.00) 0%, #141414 100%), url(../../assets/Login_img/Pessoas.jpg);
   background-size: cover;
   background-position: center center;
@@ -59,24 +58,33 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 25rem; /* Rounded to 25rem */
-  height: 35rem; /* Rounded to 37rem */
+  width: 20rem; /* Rounded to 25rem */
+  height: 30rem; /* Rounded to 37rem */
   padding: 3rem 1.5rem; /* Rounded to 3rem and 1.5rem */
   border-radius: 16px; /* Rounded to 1rem */
   background-color: #FDFEFF;
   transition: all ease 0.5s;
 }
 
-  /* Label */
   .Label {
-    color: #ED2590;
+    color: #ed6d25;
     font-family: SF Pro Display;
     font-size: 24px;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    margin-bottom: 30px;
    }
+
+   .input {
+    outline: none;
+    padding: 16px 20px;
+    width: 100%;
+    border-radius: 5px;
+    font-size: 16px;
+  
+    background-color: #f0f2f5;
+    border: none;
+  }
  
   .RememberPassword {
     display: flex;
@@ -104,7 +112,7 @@
   
   /* Estilo da caixa de seleção quando estiver marcada */
   .RememberPassword input[type="checkbox"]:checked {
-    background-color: #ED2590;
+    background-color: #ed6d25;
     padding: 3px;
     border: 2px solid #ffffff;
   }   
@@ -118,7 +126,7 @@
   
 
   .Strong a { 
-    color: #ED2590;
+    color: #ed6d25;
     font-family: SF Pro Display;
     font-size: 14px;
     font-style: normal;
@@ -137,7 +145,7 @@
   }
 
   .Content {    
-    transform: scale(1.5);
+    transform: scale(1.2);
   }
 
 }
