--- a/src/components/Profile/CommunityCard/ListCommunity.module.css
+++ b/src/components/Profile/CommunityCard/ListCommunity.module.css
@@ -27,5 +27,6 @@
   max-width: 350px;
   padding: 48px 24px;
   border-radius: 16px;
-  margin-top: 32px;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
