--- a/src/components/Profile/ProfileBio/styles.module.css
+++ b/src/components/Profile/ProfileBio/styles.module.css
@@ -6,36 +6,37 @@
 }
 
 .Content {
-    width: 592px;
-    height: 854px;
-    flex-shrink: 0;
+    display: grid;
+    flex-direction: column;
+    width: 35rem;
+    height: 40rem;
     border-radius: 16px;
     background: #FDFEFF;
-    padding: 24px;
-    margin-top: 32px;
+    padding: 1.5rem;
+    margin-top: 2rem;
 }
 
 .Content h2 {
     color: #4B4B4B;
     font-family: SF Pro Display;
-    font-size: 26px;
+    font-size: 2rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
 }
 
 .BioContent {
-    width: 544px;
+    width: 33rem;
     border-radius: 10px;
     background: #EFF3F8;
-    padding: 10px;
-    margin-top: 25.63px;
+    padding: 0.5rem;
+    margin-top: 1.5rem;
 }
 
 .BioContent p {
     color: #4B4B4B;
     font-family: SF Pro Display;
-    font-size: 16px;
+    font-size: 1.5rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
