--- a/src/components/Profile/ProfileBio/stylesInfo.module.css
+++ b/src/components/Profile/ProfileBio/stylesInfo.module.css
@@ -8,11 +8,11 @@
 .Title {
     color: #B4AEAE;
     font-family: SF Pro Display;
-    font-size: 16px;
+    font-size: 1rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    margin-bottom: 24px;
+    margin-bottom: 1.5rem;
 }
 
 .Text {
